# crm_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.py  init.sh  pyproject.toml
crm_backend/: const.py  event.py  gunicorn.conf.py  main.py  meta.py
crm_backend/plugin/: auth.py  message.py  smtp.py
crm_backend/schema/: operator.py  schema.py
crm_backend/utils/: dt_utility.py  wrapper.py
crm_backend/web/: __init__.py  analyzer.py  component.py  coporate.py  dashboard.py  home.py  membership.py  stats.py  ws.py
tests/: test_component.py  test_coprate.py  test_login.py  test_membership.py
